--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
 			<dt>Asker</dt>
 				<dd class="asker"></dd>
 		</dl>
+		<dl class="result answerer">
+			<dt>Top Answerer</dt>
+				<dd class="answerer-text"></dd>
+		</dl>
 		<div class="error">
 			<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
 		</div>
